Implementação do cadastro de cliente

--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -42,10 +42,10 @@
 
         <ul class="list-unstyled components">
           <li>
-            <a href="/home.html">Home</a>
+            <a href="/funeraria-frontend/home.html">Home</a>
           </li>
           <li>
-            <a href="cadastro-cliente.html">Cadastro de Cliente</a>
+            <a href="/funeraria-frontend/clientes.html">Clientes</a>
           </li>
           <li>
             <a
@@ -104,6 +104,13 @@
           </div>
         </nav>
 
+        <div class="row">
+          <div class="col-sm-12 col-md-12">
+            <h3 class="text-default">Cadastro de Clientes</h3>
+          </div>
+        </div>
+        <hr />
+
         <!-- CONTAINER -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
@@ -127,7 +134,19 @@
                         </div>
                         <div class="col-sm-12 col-md-2 form-group">
                             <label>Data de Contrato</label>
-                            <input type="text" aria-label="" class="form-control"> 
+                            <input type="date" aria-label="" class="form-control"> 
+                        </div>
+                        <div class="col-sm-12 col-md-2 form-group">
+                          <label>Validade do Contrato</label>
+                          <input type="date" aria-label="" class="form-control"> 
+                        </div>
+                        <div class="col-sm-12 col-md-2 form-group">
+                          <label>Status</label>
+                          <select type="date" aria-label="" class="form-control">
+                            <option>Ativo</option>
+                            <option>Inativo</option>
+                            <option>Suspenso</option>
+                          </select>
                         </div>
                     </div>
                     
