--- a/home.html
+++ b/home.html
@@ -42,10 +42,10 @@
 
         <ul class="list-unstyled components">
           <li>
-            <a href="/home.html">Home</a>
+            <a href="/funeraria-frontend/home.html">Home</a>
           </li>
           <li>
-            <a href="cadastro-cliente.html">Cadastro de Cliente</a>
+            <a href="/funeraria-frontend/clientes.html">Clientes</a>
           </li>
           <li>
             <a
