--- a/clientes.html
+++ b/clientes.html
@@ -42,10 +42,10 @@
 
         <ul class="list-unstyled components">
           <li>
-            <a href="/home.html">Home</a>
+            <a href="/funeraria-frontend/home.html">Home</a>
           </li>
           <li>
-            <a href="/cadastro-cliente.html">Cadastro de Cliente</a>
+            <a href="/funeraria-frontend/clientes.html">Clientes</a>
           </li>
           <li>
             <a
@@ -103,7 +103,97 @@
             </div>
           </div>
         </nav>
+
+        <div class="row">
+          <div class="col-sm-12 col-md-12">
+            <h3 class="text-default">Clientes</h3>
+          </div>
+        </div>
+        <hr />
+
       
+        <!-- Descricao do Plano -->
+        <div class="shadow p-3 mb-5 bg-white rounded mt-4">
+          <div class="row">
+              <div class="col-sm-12 col-md-4 form-group">
+                  <label>Filtro</label>
+                  <input type="text" aria-label="" class="form-control" placeholder="Digite uma informação para filtrar."/>
+              </div>
+              <div class="col-sm-12 col-md-2 mt-2">
+                <br>
+                <button type="button" class="btn btn-roxo btn-block">Gerar Parcelas</button>
+              </div>
+          </div>
+
+          <hr />
+
+          <!-- Tabela -->
+          <div class="row">
+              <div class="col-sm-12 table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                  <tr>
+                      <th scope="col">Cód.</th>
+                      <th scope="col">Nome</th>
+                      <th scope="col">Data do Contrato</th>
+                      <th scope="col">Bairro</th>
+                      <th scope="col">Status</th>
+                      <th scope="col">#</th>
+                      <th scope="col">#</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                      <th scope="row">1</th>
+                      <td>Cliente 1</td>
+                      <td>16/04/2020</td>
+                      <td>R$ 50,00</td>
+                      <td>Centro</td>
+                      <td>Ativo</td>
+                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                  </tr>
+                  <tr>
+                      <th scope="row">2</th>
+                      <td>Cliente 2</td>
+                      <td>16/04/2020</td>
+                      <td>R$ 50,00</td>
+                      <td>Centro</td>
+                      <td>Ativo</td>
+                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                  </tr>
+                  <tr>
+                      <th scope="row">3</th>
+                      <td>Cliente 3</td>
+                      <td>16/04/2020</td>
+                      <td>R$ 50,00</td>
+                      <td>Centro</td>
+                      <td>Ativo</td>
+                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                  </tr>
+                  <tr>
+                      <th scope="row">4</th>
+                      <td>Cliente 4</td>
+                      <td>16/04/2020</td>
+                      <td>R$ 50,00</td>
+                      <td>Centro</td>
+                      <td>Ativo</td>
+                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                  </tr>
+                  <tr>
+                      <th scope="row">5</th>
+                      <td>Cliente 5</td>
+                      <td>16/04/2020</td>
+                      <td>R$ 50,00</td>
+                      <td>Centro</td>
+                      <td>Ativo</td>
+                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                  </tr>
+                  </tbody>
+              </table>
+              </div>
+          </div>
+      </div>
+
       </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
