Correções do link.

--- a/clientes.html
+++ b/clientes.html
@@ -121,7 +121,7 @@
               </div>
               <div class="col-sm-12 col-md-2 mt-2">
                 <br>
-                <button type="button" class="btn btn-roxo btn-block">Gerar Parcelas</button>
+                <button type="button" class="btn btn-roxo btn-block">Filtrar</button>
               </div>
           </div>
 
@@ -150,7 +150,7 @@
                       <td>R$ 50,00</td>
                       <td>Centro</td>
                       <td>Ativo</td>
-                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                      <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                   </tr>
                   <tr>
                       <th scope="row">2</th>
@@ -159,7 +159,7 @@
                       <td>R$ 50,00</td>
                       <td>Centro</td>
                       <td>Ativo</td>
-                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                      <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                   </tr>
                   <tr>
                       <th scope="row">3</th>
@@ -168,7 +168,7 @@
                       <td>R$ 50,00</td>
                       <td>Centro</td>
                       <td>Ativo</td>
-                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                      <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                   </tr>
                   <tr>
                       <th scope="row">4</th>
@@ -177,7 +177,7 @@
                       <td>R$ 50,00</td>
                       <td>Centro</td>
                       <td>Ativo</td>
-                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                      <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                   </tr>
                   <tr>
                       <th scope="row">5</th>
@@ -186,7 +186,7 @@
                       <td>R$ 50,00</td>
                       <td>Centro</td>
                       <td>Ativo</td>
-                      <td><a type="button" href="/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
+                      <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                   </tr>
                   </tbody>
               </table>
