Correções no link na home.

--- a/home.html
+++ b/home.html
@@ -163,7 +163,7 @@
                         <td>16/04/2020</td>
                         <td>R$ 50,00</td>
                         <td class="Pendente">Pago com atraso</td>
-                        <td><a type="button"  href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver Cliente</a></td>
+                        <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                         <td><button type="button" class="btn btn-success btn-sm btn-block" data-toggle="modal" data-target="#ExemploModalCentralizado">Pagar</button></td>
                     </tr>
                     <tr>
@@ -174,7 +174,7 @@
                         <td>14/04/2020</td>
                         <td>R$ 50,00</td>
                         <td class="Pago">Pago sem atraso</td>
-                        <td><a type="button"  href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver Cliente</a></td>
+                        <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                         <td><button type="button" class="btn btn-success btn-sm btn-block" data-toggle="modal" data-target="#ExemploModalCentralizado">Pagar</button></td>
                     </tr>
                     <tr>
@@ -185,7 +185,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><a type="button"  href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver Cliente</a></td>
+                        <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                         <td><button type="button" class="btn btn-success btn-sm btn-block" data-toggle="modal" data-target="#ExemploModalCentralizado">Pagar</button></td>
                     </tr>
                     <tr>
@@ -196,7 +196,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><a type="button"  href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver Cliente</a></td>
+                        <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                         <td><button type="button" class="btn btn-success btn-sm btn-block" data-toggle="modal" data-target="#ExemploModalCentralizado">Pagar</button></td>
                     </tr>
                     <tr>
@@ -207,7 +207,7 @@
                         <td></td>
                         <td></td>
                         <td class="comAtraso">Atrasado</td>
-                        <td><a type="button"  href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver Cliente</a></td>
+                        <td><a type="button" href="/funeraria-frontend/cadastro-cliente.html" class="btn btn-primary btn-sm btn-block">Ver cliente</a></td>
                         <td><button type="button" class="btn btn-success btn-sm btn-block" data-toggle="modal" data-target="#ExemploModalCentralizado">Pagar</button></td>
                     </tr>
                     </tbody>
