--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -77,7 +77,7 @@
       <div id="content">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <button type="button" id="sidebarCollapse" class="navbar-btn"></button>
+            <button type="button" id="sidebarCollapse" class="navbar-btn">
               <span></span>
               <span></span>
               <span></span>
