--- a/clientes.html
+++ b/clientes.html
@@ -77,7 +77,7 @@
       <div id="content">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <button type="button" id="sidebarCollapse" class="navbar-btn"></button>
+            <button type="button" id="sidebarCollapse" class="navbar-btn">
               <span></span>
               <span></span>
               <span></span>
@@ -92,7 +92,7 @@
               aria-label="Toggle navigation"
             >
               <i class="fas fa-align-justify"></i>
-            </button>
+            </button> 
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="nav navbar-nav ml-auto">
