Implementação do campo local de pagamento.

--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -494,7 +494,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 col-md-12 form-group">
+                  <div class="col-sm-12 col-md-4 form-group">
+                    <label>Local de Pagamento</label>
+                    <select class="form-control">
+                      <option value="">Em mãos</option>
+                      <option>Em casa</option>
+                      <option>Funerária</option>
+                    </select>
+                  </div>
+                    <div class="col-sm-12 col-md-8 form-group">
                         <label>Observação</label>
                         <textarea rows="3" type="text" aria-label="" class="form-control"></textarea>
                     </div>
